--- a/chatProject/src/db.properties
+++ b/chatProject/src/db.properties
@@ -1,5 +1,5 @@
-jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/#dbname
+jdbc.driverClassName=oracle.jdbc.OracleDriver
+jdbc.url=jdbc:oracle:thin:@db202201120058_high?TNS_ADMIN=C:\Users\user\Downloads\Wallet_DB202201120058
 jdbc.username=#user
 jdbc.password=#password
 
