--- a/chatProject/pom.xml
+++ b/chatProject/pom.xml
@@ -144,6 +144,13 @@
 	    <version>19.13.0.0.1</version>
 	</dependency>
 
+      <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+      <dependency>
+         <groupId>org.projectlombok</groupId>
+         <artifactId>lombok</artifactId>
+         <version>1.18.22</version>
+         <scope>provided</scope>
+      </dependency>
 
       <!-- Spring-JDBC -->
       <dependency>
@@ -273,6 +280,12 @@
          <artifactId>junit</artifactId>
          <version>4.12</version>
          <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.projectlombok</groupId>
+         <artifactId>lombok</artifactId>
+         <version>RELEASE</version>
+         <scope>compile</scope>
       </dependency>
    </dependencies>
    <build>
