--- a/chatProject/src/main/webapp/WEB-INF/web.xml
+++ b/chatProject/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,20 @@
 
   
   <!--  -->
- <servlet>
+    <servlet>
+        <servlet-name>action3</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>/WEB-INF/config/presentation-layer.xml</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>action3</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
    <servlet-name>action2</servlet-name>
    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
    <init-param>
@@ -53,7 +66,7 @@
      <servlet-name>action</servlet-name>
      <url-pattern>*.do</url-pattern>
   </servlet-mapping>
-	
+
 	
 
 </web-app>
